Update azure-pipelines.yml To prod branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,10 +33,22 @@ jobs:
       configuration: '$(buildConfiguration)'
 
   - task: CopyFiles@2
+    displayName: 'Copy Main Branch'
+    condition: eq(variables['Build.SourceBranchName'], 'main')     
     inputs:
      SourceFolder: '$(Build.ArtifactStagingDirectory)'
      Contents: '**'
-     TargetFolder: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolder'
+     TargetFolder: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolderMain'
+     CleanTargetFolder: true
+  
+  - task: CopyFiles@2
+    displayName: 'Copy Prod Branch'
+    condition: eq(variables['Build.SourceBranchName'], 'production')     
+    inputs:
+     SourceFolder: '$(Build.ArtifactStagingDirectory)'
+     Contents: '**'
+     TargetFolder: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolderProd'
+     CleanTargetFolder: true
 
   - task: PublishPipelineArtifact@1
     inputs:
@@ -60,8 +72,8 @@ jobs:
       WebAppName: 'DigitalSignature'
       deployToSlotOrASE: true
       ResourceGroupName: 'ClWebAPI_group'
-      SlotName: 'uat'
-      packageForLinux: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolder/**/*.zip'
+      SlotName: 'production'
+      packageForLinux: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolderMain/**/*.zip'
 
 - job: DeployProd
   displayName: 'Deploy to Production'
@@ -80,4 +92,4 @@ jobs:
       deployToSlotOrASE: true
       ResourceGroupName: 'ClWebAPI_group'
       SlotName: 'production'
-      packageForLinux: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolder/**/*.zip'
+      packageForLinux: 'C:/AfiyaAgentAzure/New folder/_work/14/ArtifactFolderProd/**/*.zip'
